--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -14,7 +14,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [12.x, 14.x, 16.x]
+        node-version: 16.14.0
     
     steps:
       - uses: actions/checkout@v3
@@ -26,11 +26,6 @@ jobs:
 
       - run: npm ci
       - run: npm run build --if-present
-      
-
-      - name: Unit Test
-        run: npm test --App.test.js
-
 
   Build-GCP:
     needs: [Build]
