--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -11,17 +11,13 @@ on:
 jobs:
   Build:
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: 16.14.0
     
     steps:
       - uses: actions/checkout@v3
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Use Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 16.14.0
           cache: 'npm'
 
       - run: npm ci
